mesa (6.5.0-0.1) experimental; urgency=low

  * New upstream development release
  * Increment libdrm-dev build-dep to 2.0.1
  * Re-Add s390 and m68k to the USE_IEEE test in src/mesa/main/imports.h.
    I need to submit this upstream.

 -- David Nusinow <dnusinow@debian.org>  Thu,  6 Apr 2006 21:49:58 -0400

mesa (6.4.1-0.4) unstable; urgency=low

  * NMU
  * Add versioned conflict between libgl1-mesa-dri and xlibmesa-dri so that
    the xlibmesa-dri transitional upgrade package works

 -- David Nusinow <dnusinow@debian.org>  Mon,  6 Mar 2006 21:46:18 -0500

mesa (6.4.1-0.3) unstable; urgency=low

  * NMU
  * Add s390 and m68k to the USE_IEEE test in src/mesa/main/imports.h.
    (closes: #349437)

 -- David Nusinow <dnusinow@debian.org>  Sat, 11 Feb 2006 17:59:26 -0500

mesa (6.4.1-0.2) unstable; urgency=low

  * NMU
  * Re-add dh_installdirs call to binary-indep target so that we get
    arch-specific dirs for the mesa-swx11-source package
  * Remove makedepend from build-depends. Now we'll just build-dep on xutils
    to get the app, which will translate over to our own xorg 7.0 plans.

 -- David Nusinow <dnusinow@debian.org>  Tue, 31 Jan 2006 19:21:12 -0500

mesa (6.4.1-0.1) unstable; urgency=low

  [ Marcelo E. Magallon <mmagallo@debian.org> ]
  * debian/control: build-depend on xutils
  * include/GL/glx{int,proto,md,tokens}.h: missing upstream (closes: bug#326466)
  * debian/libgl1-mesa-dri-dev.install: install GLX include files here, too.
  * debian/rules: GLU and GLW don't have arch-specific targets.

  [ Daniel Stone <daniels@debian.org> ]
  * New upstream version, incorporating changes from Ubuntu 6.3 packaging.
  * Rename packages:
    - mesag3 -> libgl1-mesa-swrast
    - mesag-dev -> libgl1-mesa-swrast-dev
    - libgl1-mesa-dri -> libgl1-mesa
    - libgl1-mesa-dri-dev -> libgl1-mesa-dev
    - libgl1-mesa-dri still exists, but now contains the DRI modules only.
  * Drop dependency *from* mesa-common-dev on libgl1-mesa-dev and